Sun Feb  4 13:18:32 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added new packet type SILC_PACKET_SET_MODE that is used to
	  distribute the information about changed modes (for clients,
	  channels and clients channel modes) to all routers in the
	  network.  Updated the protocol specification accordingly.

	  Added functions into silcd/packet_send.c and 
	  silcd/packet_receive.c: silc_server_send_set_mode, 
	  silc_server_set_mode.

	  Added new files silcmode.[ch] into lib/silccore that implements
	  the encoding and decoding of Set Mode Payload.  Added new type
	  SilcSetModePayload.  Moved the definitions of different modes
	  from lib/silccore/silcchannel.h into lib/silccore/silcmode.h.

Sat Feb  3 15:44:54 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Oops, a little mistake in server's connection authentication 
	  protocol.  The protocol is not ended with FAILURE but with
	  SUCCESS if the authentication is Ok. :)  Affected file is
	  silcd/protocol.c.

	* Implemented NICK_CHANGE notify handling in server in the file
	  silcd/packet_receive.c  The NICK_CHANGE notify is distributed to
	  the local clients on the channel.  After the changing nickname
	  in router environment snhould work and the [<unknown>] nickname
	  should appear no more.
 
	  The silc_server_replace_id function that receives the Replace ID
	  payload now sends the NICK_CHANGE notify type also in the file
	  silcd/packet_receive.c

	* Changed WHOIS and IDENTIFY command to support the maximum amount
	  of arguments defined in protocol specs (3328 arguments).  This 
	  fixed a bug that caused problems when there were more than three
	  users on a channel.

Fri Feb  2 11:42:56 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added extra parameter, command identifier, to the
	  silc_client_send_command so that explicit command identifier
	  can be defined.

	  Changed that ID list routines uses specific command identifier